# iNTUition

./: adapter_config.json
FeedbackSystem/: feedback.json  feedback.py  improved_feedback.jsonl
project/: package-lock.json  package.json
project/src/: App.tsx  index.css  types.ts
project/src/components/: ChatInput.tsx  ChatMessage.tsx  FeedbackForm.tsx
trainer/: pyproject.toml  requirements.txt  setup.py
trainer/changemanagement_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trainer/trainer/: task.py
