[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changemanagement_trainer"
version = "0.1.0"
description = "Fine-tuning Hugging Face models for change management AI"
requires-python = ">=3.7"

dependencies = [
    "transformers==4.37.2",
    "datasets==2.16.1",
    "tokenizers>=0.14.1",
    "torch==2.1.2",
    "accelerate==0.25.0",
    "scikit-learn"
]
